--- a/index.html
+++ b/index.html
@@ -1,51 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Florian's Site</title>
 
-    <!-- File per CSS -->
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
-  <body>
-    <!-- File-t e JavaScript -->
-    <script src="scripts/script.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Florian's Site</title>
 
-    <!-- NavBar -->
-    <header class="header-class">
+  <!-- File per CSS -->
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+<body>
+  <!-- File-t e JavaScript -->
+  <script src="scripts/script.js"></script>
+
+  <!-- NavBar -->
+  <header class="header-class">
+    <nav class="navbar">
       <h3 class="name-lastname">Florian Zeqiri</h3>
-      <nav>
-        <ul class="nav_links">
-          <li><a href="#">< Home ></a></li>
-          <li><a href="#">< About ></a></li>
-          <li><a href="#">< Projects ></a></li>
-        </ul>
-      </nav>
-      <a href="" class="cta"><button>Contact</button></a>
-    </header>
+      <ul class="nav_links">
+        <li><a href="#">
+            < Home>
+          </a></li>
+        <li><a href="#">
+            < About>
+          </a></li>
+        <li><a href="#">
+            < Projects>
+          </a></li>
+      </ul>
+    </nav>
+    <a href="" class="cta"><button>Contact</button></a>
+  </header>
 
-    <!-- Hyrja ("Home") -->
-    <div class="home">
-      <div class="home-cont">
-        <p class="hello">
-          Hello, my name is <span class="name">Florian Zeqiri.</span>
-        </p>
-        <p class="profession">
-          I'm a <span class="prof-typing">Web Developer</span>
-        </p>
-      </div>
+  <!-- Hyrja ("Home") -->
+  <div class="home">
+    <div class="home-cont">
+      <img
+        src="https://dub06pap001files.storage.live.com/y4mXfq6QPjNZLzps5YyskMK7FXLf4cipelv_2LES9KTpzmkBAw-wbcqHoA5nLHr1RvT8C_oi5ttg48yvg76KpEESYlWo5GD8kv2gUEm9d2u2geU4uc77didUpLoKXuNRA-knwfIFcj8o-Dz7qjc4U53wd-hZLCLNL_o0_Yqed6c2-q0N-tTPOlL4Tzws5kbkHKM?width=720&height=720&cropmode=none"
+        alt="profile-pic" class="my-pic">
+      <h1 class="small-txt">
+        Hi, my name is
+      </h1> 
+      <h2 class="home-name">Florian Zeqiri.</h2>
+      <h2 class="home-profession">I am a Web Developer.</h2>
     </div>
+  </div>
 
-    <!-- Rreth Meje ("About") -->
-    <div class="about"></div>
+  <!-- Rreth Meje ("About") -->
+  <div class="about"></div>
 
-    <!-- Projektet ("Projects ") -->
-    <div class="projects"></div>
+  <!-- Projektet ("Projects ") -->
+  <div class="projects"></div>
 
-    <!-- Kontakti ("Contacts")-->
-    <div class="contact"></div>
-    <footer class="footer-class"></footer>
-  </body>
+  <!-- Kontakti ("Contacts")-->
+  <div class="contact"></div>
+  <footer class="footer-class"></footer>
+</body>
+
 </html>
