--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <title>Florian's Site</title>
 
   <!-- File per CSS -->
+
   <link rel="stylesheet" href="css/styles.css" />
-  <!-- File-t e JavaScript -->
+
 </head>
 
 <body>
 
   <!-- NavBar -->
-  <header class="header-class">
+
+  <header>
     <nav class="navbar">
       <h3 class="name-lastname">Florian Zeqiri</h3>
       <ul class="nav_links">
@@ -27,23 +29,20 @@
             <span class="par-decor">
               < </span> About <span class="par-decor"> > </span>
           </a></li>
-        <li><a href="#">
+        <li><a href="#projects">
             <span class="par-decor">
               < </span> Projects <span class="par-decor"> > </span>
           </a></li>
       </ul>
-      <a href=""><button class="contact-btn">Contact</button></a>
+      <a href="#contact"><button class="contact-btn">Contact</button></a>
     </nav>
   </header>
 
   <!-- Hyrja ("Home") -->
+
   <div id="home">
     <div class="home-cont">
-      <!--
-        <img
-        src="https://dub06pap001files.storage.live.com/y4mXfq6QPjNZLzps5YyskMK7FXLf4cipelv_2LES9KTpzmkBAw-wbcqHoA5nLHr1RvT8C_oi5ttg48yvg76KpEESYlWo5GD8kv2gUEm9d2u2geU4uc77didUpLoKXuNRA-knwfIFcj8o-Dz7qjc4U53wd-hZLCLNL_o0_Yqed6c2-q0N-tTPOlL4Tzws5kbkHKM?width=720&height=720&cropmode=none"
-          alt="profile-pic" class="my-pic">
-      -->
+
       <h1 class="small-txt">
         Hi, my name is
       </h1>
@@ -58,14 +57,13 @@
   </div>
 
   <!-- Rreth Meje ("About") -->
-  <div class="about"></div>
 
   <div id="about">
+    <h1 class="about-title">
+      <span class="par-decor">
+        < </span> About Me <span class="par-decor"> > </span>
+    </h1>
     <div class="about-content">
-      <h1 class="title">
-        < About Me>
-      </h1>
-
       <p class="txt-container">
         I am Florian Zeqiri, a Computer Science and Engineering student at UBT (University of Business and Technology).
         I possess great programming skills in Java, Python, HTML and CSS, eager to learn new skills on Web Development
@@ -74,27 +72,38 @@
         development, I am certified in Responsive Web Design at freeCodeCamp, also certified at back-end programming
         with Django at BIT Academy.
       </p>
-      <p class="txt-container">
-        I gained a whole lot of technical skills during my journey as a developer, most of those skills came through
-        certifications projects. For example, developing a Personal Portfolio with HTML5 and CSS3, brought new
-        challenges that would push my skills further. Because of that, now I am familiar with concepts of Responsive Web
-        Designing. I also learned how to better utilize tools to my advantage.
-        During my work on such projects, I developed habits and non-technical skills such as researching, different
-        methodologies, clean-coding habits, time-management skills and that would be of great use to me as a developer.
-        I am always open to learning new things in both technical and/or non-technical skills.
-        I remain hopeful that I will be given an opportunity for an interview, where we could discuss further about my
-        skills and any additional information as well as the open position.
-        Thank you beforehand for your time.
+      <img
+        src="https://dub06pap001files.storage.live.com/y4mRvNYS0qlw_XkJuhVHgji6po0lbSTztqovo4lMZnf9h2kvQeJcs36l-C85-iuTc_FyBMCg58qtkH8FZPN8jjZJ3STb74d5M5i0Jkdklc7072cnTPly5FMxX8hICF4HEjzHt1hupOGgktqch2czByBN_QkPQWdUR4328Qai_lpH1Rvee-DB4PxcEg3ylfMCPdC?width=400&height=400&cropmode=none"
+        alt="profile-pic" class="profile-pic">
 
-      </p>
     </div>
   </div>
   <!-- Projektet ("Projects ") -->
-  <div class="projects"></div>
-
+  <div id="projects"></div>
+  <div class="proj-title">
+    <h1>
+      <span class="par-decor">
+        < </span>
+          Projects
+          <span class="par-decor">
+            >
+          </span>
+    </h1>
+  </div>
+  <div class="proj-content">
+    <p class="proj-txt">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod omnis reprehenderit cupiditate quis placeat
+      obcaecati vitae dolore voluptatum doloribus consectetur officiis qui, eveniet sunt sapiente ut perferendis a
+      dolores? Repellendus fuga consequatur, totam ducimus voluptatibus maiores, reprehenderit beatae iure voluptates
+      vel et quae. Non amet consequuntur ipsum eos exercitationem ab nihil quod nostrum omnis, necessitatibus nam
+      voluptatum quisquam quas sunt natus aperiam quidem corrupti error eaque quia quam debitis ipsam quae? Blanditiis a
+      nisi quo corporis recusandae aliquid ab provident?
+    </p>
+  </div>
   <!-- Kontakti ("Contacts")-->
-  <div class="contact"></div>
+  <div id="contact"></div>
   <footer class="footer-class"></footer>
+  <!-- File per javascript -->
   <script src="scripts/script.js"></script>
 </body>
 
