Slight design changes

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
   <!-- Rreth Meje ("About") -->
 
   <div id="about">
-    <h1 class="about-title">
-      <span class="par-decor">
-        < </span> About Me <span class="par-decor"> > </span>
-    </h1>
     <div class="about-content">
+      <h1 class="active title">
+        <span class="par-decor">
+          < </span> About Me <span class="par-decor"> > </span>
+      </h1>
       <p class="txt-container">
         I am Florian Zeqiri, a Computer Science and Engineering student at UBT (University of Business and Technology).
         I possess great programming skills in Java, Python, HTML and CSS, eager to learn new skills on Web Development
@@ -72,33 +72,35 @@
         development, I am certified in Responsive Web Design at freeCodeCamp, also certified at back-end programming
         with Django at BIT Academy.
       </p>
-      <img
-        src="https://dub06pap001files.storage.live.com/y4mRvNYS0qlw_XkJuhVHgji6po0lbSTztqovo4lMZnf9h2kvQeJcs36l-C85-iuTc_FyBMCg58qtkH8FZPN8jjZJ3STb74d5M5i0Jkdklc7072cnTPly5FMxX8hICF4HEjzHt1hupOGgktqch2czByBN_QkPQWdUR4328Qai_lpH1Rvee-DB4PxcEg3ylfMCPdC?width=400&height=400&cropmode=none"
-        alt="profile-pic" class="profile-pic">
+      <div class="image-wrapper">
+        <img
+          src="https://dub06pap001files.storage.live.com/y4mRvNYS0qlw_XkJuhVHgji6po0lbSTztqovo4lMZnf9h2kvQeJcs36l-C85-iuTc_FyBMCg58qtkH8FZPN8jjZJ3STb74d5M5i0Jkdklc7072cnTPly5FMxX8hICF4HEjzHt1hupOGgktqch2czByBN_QkPQWdUR4328Qai_lpH1Rvee-DB4PxcEg3ylfMCPdC?width=400&height=400&cropmode=none"
+          alt="profile-pic" class="profile-pic">
+      </div>
 
     </div>
   </div>
   <!-- Projektet ("Projects ") -->
-  <div id="projects"></div>
-  <div class="proj-title">
-    <h1>
-      <span class="par-decor">
-        < </span>
-          Projects
+  <div id="projects">
+    <div class="proj-content">
+        <h1 class="active title">
           <span class="par-decor">
-            >
-          </span>
-    </h1>
-  </div>
-  <div class="proj-content">
-    <p class="proj-txt">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod omnis reprehenderit cupiditate quis placeat
-      obcaecati vitae dolore voluptatum doloribus consectetur officiis qui, eveniet sunt sapiente ut perferendis a
-      dolores? Repellendus fuga consequatur, totam ducimus voluptatibus maiores, reprehenderit beatae iure voluptates
-      vel et quae. Non amet consequuntur ipsum eos exercitationem ab nihil quod nostrum omnis, necessitatibus nam
-      voluptatum quisquam quas sunt natus aperiam quidem corrupti error eaque quia quam debitis ipsam quae? Blanditiis a
-      nisi quo corporis recusandae aliquid ab provident?
-    </p>
+            < </span>
+              Projects
+              <span class="par-decor">
+                >
+              </span>
+        </h1>
+      <p class="proj-txt">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod omnis reprehenderit cupiditate quis placeat
+        obcaecati vitae dolore voluptatum doloribus consectetur officiis qui, eveniet sunt sapiente ut perferendis a
+        dolores? Repellendus fuga consequatur, totam ducimus voluptatibus maiores, reprehenderit beatae iure voluptates
+        vel et quae. Non amet consequuntur ipsum eos exercitationem ab nihil quod nostrum omnis, necessitatibus nam
+        voluptatum quisquam quas sunt natus aperiam quidem corrupti error eaque quia quam debitis ipsam quae? Blanditiis
+        a
+        nisi quo corporis recusandae aliquid ab provident?
+      </p>
+    </div>
   </div>
   <!-- Kontakti ("Contacts")-->
   <div id="contact"></div>
