--- a/index.html
+++ b/index.html
@@ -17,26 +17,16 @@
 
   <!-- NavBar -->
 
-  <header>
-    <nav class="navbar">
-      <h3 class="name-lastname">Florian Zeqiri</h3>
-      <ul class="nav_links">
-        <li><a href="#home" class="nav__links">
-            <span class="par-decor">
-              < </span> Home <span class="par-decor"> > </span>
-          </a></li>
-        <li><a href="#about">
-            <span class="par-decor">
-              < </span> About <span class="par-decor"> > </span>
-          </a></li>
-        <li><a href="#projects">
-            <span class="par-decor">
-              < </span> Projects <span class="par-decor"> > </span>
-          </a></li>
-      </ul>
-      <a href="#contact"><button class="contact-btn">Contact</button></a>
-    </nav>
-  </header>
+  <nav>
+    <ul class="menu">
+      <li class="logo"><a href="#">Florian Zeqiri</a></li>
+      <li class="item"><a href="#home"> <span class="par-decor"> < </span>Home <span class="par-decor"> > </span></a></li>
+      <li class="item"><a href="#about"> <span class="par-decor"> < </span>About <span class="par-decor"> > </span></a></li>
+      <li class="item"><a href="#projects"> <span class="par-decor"> < </span>Projects <span class="par-decor"> > </span></a></li>
+      <li class="item"><a href="#">  <span class="par-decor"> < </span>Contact <span class="par-decor"> > </span></a></li>
+      <li class="toggle-btn"><span class="bars"></span></li>
+    </ul>
+  </nav>
 
   <!-- Hyrja ("Home") -->
 
@@ -92,13 +82,7 @@
               </span>
         </h1>
       <p class="proj-txt">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod omnis reprehenderit cupiditate quis placeat
-        obcaecati vitae dolore voluptatum doloribus consectetur officiis qui, eveniet sunt sapiente ut perferendis a
-        dolores? Repellendus fuga consequatur, totam ducimus voluptatibus maiores, reprehenderit beatae iure voluptates
-        vel et quae. Non amet consequuntur ipsum eos exercitationem ab nihil quod nostrum omnis, necessitatibus nam
-        voluptatum quisquam quas sunt natus aperiam quidem corrupti error eaque quia quam debitis ipsam quae? Blanditiis
-        a
-        nisi quo corporis recusandae aliquid ab provident?
+        
       </p>
     </div>
   </div>
