--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         Hi, my name is
       </h1>
       <h2 class="home-name">Florian Zeqiri.</h2>
-      <h2 class="home-profession">I am a <span class="prof-typing"> Web Developer.</span></h2>
+      <h2 class="home-profession">I am a <span class="prof-typing"> </span></h2>
       <p class="para-text">
         I'm a CS student specializing in Software Engineering (and occasionally web development).<br>
         Currently i'm focused on my studies at <a href="https://www.ubt-uni.net" class="uni-link">UBT</a>.
@@ -89,7 +89,9 @@
   <!-- Kontakti ("Contacts")-->
   <div id="contact"></div>
   <footer class="footer-class"></footer>
+
   <!-- File per javascript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
   <script src="scripts/script.js"></script>
 </body>
 
