--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
   <nav>
     <ul class="menu">
       <li class="logo"><a href="#">Florian Zeqiri</a></li>
-      <li class="item"><a href="#home"> <span class="par-decor"> < </span>Home <span class="par-decor"> > </span></a></li>
-      <li class="item"><a href="#about"> <span class="par-decor"> < </span>About <span class="par-decor"> > </span></a></li>
-      <li class="item"><a href="#projects"> <span class="par-decor"> < </span>Projects <span class="par-decor"> > </span></a></li>
-      <li class="item"><a href="#">  <span class="par-decor"> < </span>Contact <span class="par-decor"> > </span></a></li>
+      <li class="item"><a href="#home"> <span class="par-decor">
+            < </span>Home <span class="par-decor"> > </span></a></li>
+      <li class="item"><a href="#about"> <span class="par-decor">
+            < </span>About <span class="par-decor"> > </span></a></li>
+      <li class="item"><a href="#projects"> <span class="par-decor">
+            < </span>Projects <span class="par-decor"> > </span></a></li>
+      <li class="item"><a href="#"> <span class="par-decor">
+            < </span>Contact <span class="par-decor"> > </span></a></li>
       <li class="toggle-btn"><span class="bars"></span></li>
     </ul>
   </nav>
@@ -42,7 +46,7 @@
         I'm a CS student specializing in Software Engineering (and occasionally web development).<br>
         Currently i'm focused on my studies at <a href="https://www.ubt-uni.net" class="uni-link">UBT</a>.
       </p>
-      <button class="resume-btn"> Check out my resume! </button>
+      <a href="https://docs.google.com/document/d/1Qe35kYfePKemFMe93hvlAXEKibMnsmMj3Pt-07hQmxU/edit"><button class="resume-btn"> Check out my resume! </button></a> 
     </div>
   </div>
 
@@ -73,17 +77,14 @@
   <!-- Projektet ("Projects ") -->
   <div id="projects">
     <div class="proj-content">
-        <h1 class="active title">
-          <span class="par-decor">
-            < </span>
-              Projects
-              <span class="par-decor">
-                >
-              </span>
-        </h1>
-      <p class="proj-txt">
-        
-      </p>
+      <h1 class="title">
+        <span class="par-decor">
+          < </span>
+            Projects
+            <span class="par-decor">
+              >
+            </span>
+      </h1>
     </div>
   </div>
   <!-- Kontakti ("Contacts")-->
@@ -91,7 +92,8 @@
   <footer class="footer-class"></footer>
 
   <!-- File per javascript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
+    referrerpolicy="no-referrer"></script>
   <script src="scripts/script.js"></script>
 </body>
 
