--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               Responsive web using HTML and CSS. General Survey Form.
             </p>
           </div>
-          <button class="btn">See more!</button>
+          <a href="https://codepen.io/florianzeqiri/pen/abYezjX"> <button class="btn">See more!</button></a>
         </div>
       </div>
   
@@ -141,7 +141,7 @@
               A Timetable created for an University to manage classess and Students. Made with python and Tkinter.
             </p>
           </div>
-          <button class="btn">See more!</button>
+          <a href="https://github.com/FlorianZeqiri/Tkinter_Python_Timetable"> <button class="btn">See more!</button></a>
         </div>
       </div>
   
@@ -159,7 +159,7 @@
               Responsive web using HTML and CSS. A tribute page for an American Agronomist named Norman Borlaug. 
             </p>
           </div>
-          <button class="btn">See more!</button>
+          <a href="https://github.com/FlorianZeqiri/Tribute_page_fcc"> <button class="btn">See more!</button></a>
         </div>
       </div>
     </div>
